<resources>
    <string name="app_name">Sender</string>
    <string name="facebook_app_id">1750407855222125</string>
    <string name="empty_chatting_list">채팅목록이 없습니다</string>
    <string name="finish">뒤로 버튼을 한번 더 누르시면 종료됩니다</string>
    <string name="empty_email">이메일 주소가 없습니다</string>
    <string name="praise">칭찬하기</string>
    <string name="report">신고하기</string>
    <string name="empty_reivew">리뷰가 없습니다</string>
    <string name="service_terms">서비스 이용약관</string>
    <string name="service_terms_gps">위치정보 서비스 이용약관</string>
    <string name="service_terms_personal">개인정보 취급방침</string>
    <string name="service_terms_content">
        <![CDATA[
            <h2>제 1조(목적)</h2>
            <p>이 약관은 SENDER[센더](주)(이하"회사"라 한다)가 제공하는 SENDER 및 기타 모바일 어플리케이션 서비스(이하"SENDER서비스"라 한다)
            내에서 유료서비스의 이용과 관련하여 "회사"와 "회원"의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.</p>
            <br>
            <h2>제2조(약관의 적용)</h2>
            <p>1.	본 약관은 이용자가 "회원" 가입함과 동시에 효력이 발생합니다. 관계법령에 위배되지 않는 범위 내에서 개정될 수 있으며 이는 서비스
             공지사항 및 이메일 통보로 효력을 인정받습니다.
             <br><br>2.	"회원"은 개정된 약관에 동의하지 않을 경우 "회사"에 계약해지 및 탈퇴를 요청할 수 있으며 계속 서비스를 사용할 경우 이는 변경된 약관에 동의하는 것으로 간주합니다.
            </p>
             <br>

            <h2>제3조(용어의 정의)</h2>
            <p>이 약관에서 사용하는 용어의 정의는 다음과 같습니다.<br>
            <p>1.	"회원"이라 함은 이 약관에 따라 "회사"와 이용계약을 체결하여 "회사"가 제공하는 서비스와 유료서비스를 이용하는 자를 말합니다.<br><br>
                2.	"서비스"라 함은 구현되는 단말기(iOS, Android OS 등을 기반 시스템으로 하는 각종 모바일 기기를 포함)에서 "회원"과 "회원"이 매칭되기 위하여 주고받을 수 있는 모든 서비스를 말합니다.<br><br>
                3.	"앱스토어"라 함은 모바일 온라인 콘텐츠를 자유롭게 구매 또는 판매하는 가상의 장터를 의미하며 Apple의 iTunes App Store, Google Inc.의 Google Play 등을 총칭합니다.<br><br>
                4.	"UDID"는 Unique Device Identifier의 약자로 회원 개개인이 보유한 단말기를 식별할 수 있는 고유 코드를 의미합니다<br><br>
                5.	이 약관에 사용되는 용어 중 본 조에서 정하지 아니한 부분은 관계법령 및 일반 관례에 따릅니다.
            </p>
             <br>

             <h2>제4조(센더 서비스)</h2>
            <p>이 약관에서 사용하는 용어의 정의는 다음과 같습니다.</p>
            <p>1.	센더에서 제공하는 서비스를 택배를 보낼 송신자와 수신자로 실시간으로 매칭하는 P2P배송서비스라 부릅니다.<br><br>
2.	센더에 등록되는 모든 기본가격은 회원 간에 임의 책정됩니다.<br><br>
3.	배송을 요청하고자 하는 회원을 "센더"라 칭합니다.<br><br>
4.	배송을 진행하고자 하는 회원을 "딜리버러"라 칭합니다.<br><br>
5.	딜리버러와 센더가 배송을 요청하거나 배송을 하기 위해 발행하는 것을
“게시물" 이라 칭합니다.<br><br>
6.	가입된 회원만 SENDER에서 활동할 수 있으며, 회원 등록은 무료입니다.<br><br>
7.	"회원"이 서비스를 이용한 게시물에 대한 내용물이 다음 각 항에 해당된다고 판단되는 경우에 "회사"는 사전통지 없이 서비스 이용을 중단할 수 있고, 이에 대하여 "회사"는 어떠한 책임도 지지 않습니다.<br>
<p>a.	다른 회원 또는 제3자를 비방하거나 중상모략으로 명예를 손상시키는 내용인 경우<br>
b.	공공질서 및 미풍양속에 위반되는 내용일 경우<br>
c.	불법물 게재 혹은 범죄적 행위에 결부된다고 인정되는 경우<br>
d.	회사의 저작권,제3자의 저작권 등 기타 권리를 침해하는 내용인 경우<br>
e.	회원이 성적인 내용 및 음란물을 게재하거나 음란사이트를 링크하는 경우<br>
f.	회사로부터 사전 승인 받지 아니한 상업광고, 판촉 내용을 게시하는 경우<br>
g.	해당 상품과 관련 없는 내용인 경우<br>
h.	정당한 사유 없이 당사를 비방하거나 서비스를 방해하는 내용을 기재하는 경우<br>
i.	기타 관계법령에 위반된다고 판단되는 경우<br></p>
8.	센더와 딜리버러는 매칭되기 전까지 개인정보를 절대 유출해서는 안됩니다.<br><br>
9.	잦은 분쟁을 일으키는 사용자는 계정이 영구정지 될 수 있습니다.<br><br>
10.	회사는 불량회원의 서비스 이용을 제한하기 위해 신고하기 서비스를 운영하고 있습니다.<br><br>
11.	센더에서 제공하는 서비스의 범위는 웹사이트 및 모바일 어플리케이션 상에서 센더와 딜리버러가 매칭되는 것을 끝으로 합니다. 매칭 이후 작업 중 발생되는 문제의 책임은 전적으로 회원 본인에게 귀속됩니다.
</p>
             <br>
 <h2>제5조 사고 방지</h2>
            <p>이 약관에서 사용하는 용어의 정의는 다음과 같습니다.<br><br>
            <p>1.	센더는 개인정보 수집 목적과 개인정보 취급방침 또는 특정 서비스에 대한 개인정보 보호 추가 고지를 준수하는 범위에서만 개인정보를 이용합니다.<br><br>
2.	센더는 사용자 개인정보 보호를 위해서 신상정보를 공개하지 않습니다.<br><br>
3.	성인물 또는 불법, 욕설, 비난, 악용, 저작권 위반, 광고성, 스팸, 폭력, 사기 또는 어떠한 적절하지 못한 것도 엄격히 금합니다. 그럴 경우 사용 계정과 해당 IP 접속이 차단 됩니다.<br><br>
            </p>
             <br>

  <h2>제6조 ("회원"의 의무)</h2>
            <p>1.	"회원"은 "회원"과의 거래(이하 "등록/신청/선택/매칭")를 하기 전에 반드시 상세 내용과 거래의 조건을 정확하게 확인한 후 충분한 대화와 검증을 통해 거래를 확정해야 합니다. 거래 내용과 거래 조건을 확인하지 않고 거래를 진행하는데 발생한 모든 손실, 손해는 "회원"에게 있습니다.<br><br>
2.	"회원"은 이 약관 및 "회사"가 서비스와 관련하여 고지하는 내용을 준수하여야 하며, 약관 및 고지내용을 위반하거나 이행하지 아니하여 발생하는 모든 손실, 손해에 대하여 책임을 부담합니다.<br><br>
3.	"회사"는 "회원"과 "회원"의 거래 내용과 거래 조건에 대하여 어떠한 보증이나 책임도 부담하지 않습니다. 따라서 "회원"은 거래 확정 시 스스로의 책임 하에 거래를 진행하여야 합니다.<br><br>
4.	"회사"는 "회원" 개인 정보에 대한 보증을 하지 않습니다. 또한 작업 중 발생한 문제의 책임은 전적으로 회원 본인에게 귀속되기에 신중히 검토한 후 서비스를 이용해야 합니다.<br><br>
5.	"회원"이 직접 입력한 정보는 진실하여야 하며 만일 회원이 허위 기타 부정한 정보를 입력하여 다른 회원에게 피해가 발생할 경우 그에 대한 민.형사상의 책임을 포함한 일체의 책임은 회원 본인에게 귀속됩니다.<br><br>
6.	미성년자는 “회원” 이 될 수 없습니다.<br><br>
7.	"회원"은 아래 각 호에 해당하는 행위를 해서는 안됩니다.<br><br>
<p>a.	타인의 주민번호, ID와 비밀번호를 도용하는 행위<br>
b.	개인 정보를 허위 또는 타인의 것으로 등록하는 행위<br>
c.	상대방에 대한 비방 또는 인격모독을 하거나 이를 작성 및 유포하는 행위<br>
d.	공공질서, 미풍양속에 저해하는 저작물을 등록 또는 유통시키는 행위<br>
e.	어플리케이션 내에서, 불법적으로 물건을 판매하거나 상행위를 하는 행위<br>
f.	센더가 제공하는 프로필 및 개인정보(키워드,사진,이름,연락처 등)을 무단 캡쳐(저장)하는 행위 및 이를 유출하여 외부에 게시하는 경우<br>
g.	센더에 대한 허위 사실을 유포하거나 업무방해를 하는 행위</p>
이상 위 항 각 호 해당 사항에 명시한 내용을 위반한 회원은 강제 탈퇴 처리 될 수 있으며 민 형사상의 책임을 지게 됩니다.<br><br>
8.	센더 회원의 권한은 본인이 아닌 타인에게 양도 및 판매가 불가능합니다.<br><br>
9.	센더에서 허용한 정당한 거래(최종 선택과 수락을 통해 매칭이 성사된 경우)를 통해 상대방의 연락처를 얻는 것이 아닌, 센더의 키워드, 나의 프로필, 사진, 댓글, 게시글 내용 등.회원이 작성할 수 있는 서비스 내의 모든 영역에 일체의 개인 연락처(이메일,전화번호)등을 기재하거나 이를 유도하여 부당하게 연락할 수 있는 수단을 공개하면 센더 서비스를 부정하게 이용하는 행위로 간주하여 강제 탈퇴 처리될 수 있으며 이로 인한 피해에 대해 "회사"는 책임지지 않습니다.<br><br>
10.	본 약관을 위반하거나, 기타 대한민국 관계 법령에 위반하는 행위에 대해서는 경고 없이 회원이 권한이 박탈되며 이에 대해 "회사"는 "회원"에게 어떠한 보상도 하지 않습니다.
</p>
            <br>

              <h2>제7조 ("회원"의 게시물)</h2>
            <p>1.	"회원"이 작성한 게시물에 대한 모든 권리 및 책임은 이를 게시한 회원에게 있으며, "회사"는 "회원"이 게시하거나 등록하는 서비스의 내용물이 다음 각 항에 해당된다고 판단되는 경우에 사전통지 없이 삭제할 수 있고, 이에 대하여 "회사"는 어떠한 책임도 지지 않습니다.<br><br>
            <p>
a.	다른 회원 또는 제3자를 비방하거나 중상모략으로 명예를 손상시키는 내용인 경우<br>
b.	공공질서 및 미풍양속에 위반되는 내용일 경우<br>
c.	범죄적 행위에 결부된다고 인정되는 경우<br>
d.	회사의 저작권,제3자의 저작권 등 기타 권리를 침해하는 내용인 경우<br>
e.	회원이 사이트와 게시판에 음란물을 게재하거나 음란사이트를 링크하는 경우<br>
f.	회사로부터 사전 승인 받지 아니한 상업광고, 판촉 내용을 게시하는 경우<br>
g.	해당 상품과 관련 없는 내용인 경우<br>
h.	정당한 사유 없이 당사를 비방하거나 서비스를 방해하는 내용을 기재하는 경우<br>
i.	기타 관계법령에 위반된다고 판단되는 경우<br></p>
</p>
            <br>

              <h2>제8조 회원탈퇴 및 자격상실</h2>
            <p>1.	"회원"은 언제든지 센더 어플리케이션 내 설정 창에서 내 “회원탈퇴"기능을 통하여 이용계약 해지 신청을 할 수 있으며, "회사"는 관련법 등이 정하는 바에 따라 이를 즉시 처리하여야 합니다.<br><br>
2.	"회원"이 계약을 해지할 경우, 관련법 및 개인정보취급방침에 따라 회사가 회원정보를 보유하는 경우를 제외하고는 해지 즉시 회원의 개인정보는 소멸됩니다. 또한 회원의 아이디는 재사용을 할 수 없습니다.<br><br>
3.	"회원"이 계약을 해지하는 경우, "회원"이 작성한 게시물 일체는 삭제되지 않습니다.<br>
</p>
            <br>

              <h2>제9조 ("회사"의 의무)</h2>
            <p>1.	"회사"는 지속적이고 안정적인 서비스 제공을 위해 최선을 다합니다.<br><br>
2.	"회사"는 회사가 정한 약관 및 운영 정책을 위반하는 불량 회원들을 강제 탈퇴조치 하거나 혹은 관계 법령에 따라 법적 절차를 진행할 의무를 가집니다.<br><br>
3.	"회사"는 정보통신망 이용 촉진 및 정보보호 등에 관한 법률 등 관계법령에 따라 "회원"이 회원가입 신청 시 기록한 개인정보, 이후에 추가로 기록한 개인정보 및 서비스 이용 중 생성되는 개인정보를 보호하여야 합니다.<br><br>
4.	"회사"의 임직원은 서비스 제공과 관련한 "회원"의 개인정보를 센더 회원 외에는 제3자에게 누설 또는 배포해서는 안되며 이를 어길 시 직위해제의 사유가 될 수 있습니다.<br><br>
5.	"회사"는 정기적으로 "회원"에게 당사의 서비스 내용 및 이용 안내에 대한 정기적인 서신을 보냅니다.(공지,SMS,E-mail,어플리케이션 알림 등)<br><br>
6.	"회사"는 이용계약의 체결, 계약사항의 변경 및 해지 등 회원과의 계약관련 절차 및 내용에 있어 이용고객에게 편의를 제공하도록 최선을 다합니다.<br><br>
7.	"회사"는 센더 가입 시 "회원"에게 사전 정보입력(가입을 위한 자세한 개인정보)을 강요하지 않습니다. 다만 서비스 신뢰도를 유지하기 위해 정보입력을 위한 수단(기능)을 제공합니다.<br><br>
8.	다수의 선량한 회원을 보호하기 위해 신고하기를 운영하며 가입한 회원의 정보가<br>
<p>a.	게시글에 기재한 사항과 (많이)상이한 경우
b.	배송 외의 다른 부정한 목적이 있는 경우
c.	타 회원으로부터 유해한 행동을 제보 받거나 운영자가 직접 발견한 경우</p>
이를 확인하고 제재하기 위한 절차와 법적으로 가능한 범위 내의 조치를 다합니다.
</p>
            <br>

              <h2>제10조 면책조항</h2>
            <p>1.	"회사"는 다음 각 호의 경우로 서비스를 제공할 수 없는 경우 이로 인하여 이용자에게 발생한 손해에 대해서는 책임을 부담하지 않습니다.<br><br>
<p>a.	천재지변 또는 이에 준하는 불가항력의 상태가 있는 경우
b.	서비스 제공을 위하여 회사와 서비스 제휴계약을 체결한 제3자의 고의적인 서비스 방해가 있는 경우
c.	"회사"의 제반 사정으로 서비스를 할 수 없는 경우
d.	이용자의 귀책사유로 서비스 이용에 장애가 있는 경우
e.	상기 각 항을 제외한 기타 "회사"의 고의,과실이 없는 사유로 인한 경우</p>
2.	"회사"는 서비스 및 서비스에 게재된 정보, 자료, 사실의 신뢰도, 정확성 등에 대해서는 보증을 하지 않으며 이로 인해 발생한 이용자의 손해에 대하여는 책임을 부담하지 아니합니다.<br><br>
3.	"회사"는 서비스 개편이나 운영상 또는 "회사"의 긴박한 상황 등에 의해 서비스 전부나 일부를 중단할 필요가 있는 경우 30일전에 홈페이지에 이를 공지하고 서비스의 제공을 중단할 수 있습니다. "회원"이 충전한 코인이 남아있을 경우 중단 직전까지 상환이 가능합니다.<br><br>
4.	"회사"는 "회원"의 귀책사유로 인한 서비스 이용 장애에 대한 책임이 면제됩니다.<br><br>
5.	"회사"는 "회원"이 회사의 서비스 제공으로부터 기대되는 이익을 얻지 못하였거나, 서비스 내용을 숙지하지 못하여 발생하는 손해 등에 대해서는 책임이 면제됩니다.<br><br>
6.	"회사"는 "회원" 신원을 보증하지 않습니다. 또한 센더 "회원"이 다른 센더 "회원"에게 경제적, 정신적, 물질적 피해를 가해도 그 책임은 해당 "회원"에게 있습니다.<br><br>
7.	"회사"는 "회원"이 본 약관 규정을 위배하여 발생한 손실에 대해서는 책임을 지지 않습니다.<br><br>
8.	"회사"의 동의 없이 제3자에게 ID또는 "회원"의 권한을 판매 및 양도할 경우 회원 자격 박탈 및 민사청구 및 형사상의 고소 또는 고발이 가능합니다. 또한 이로 인한 모든 피해는 불법으로 회원권한을 판매/양도한 회원에게 귀속됩니다.<br><br>
9.	"회원"이 작성한 아이디가 본인이 확인 가능한 이메일이 아니거나 연락처 갱신을 하지 않아 "회사"가 전달하는 공지사항이 그 전달 방법인 E-mail과 SMS전송, 또는 어플리케이션 알람을 통해 전달되지 못하여 발생하는 손해에 대한 책임은 "회원" 본인에게 있습니다.<br><br>
10.	"회원" 간 혹은 "회원"과 제3자 상호간의 온라인 및 오프라인상에서 이루어진 행위에 대해서는 "회원" 본인에게 책임이 있습니다. 이에 작업을 함에 있어 신중히 결정하여 센더와 딜리버러로서 올바른 활동을 하시기 바랍니다.<br>
</p>
            <br>
        ]]>
    </string>
    <string name="request">요청</string>
    <string name="delivery">배송</string>
    <string name="review">리뷰</string>
    <string name="review_detail">상세리뷰</string>
    <string name="question_ask">문의하기</string>
    <string name="question_title">문의합니다</string>
    <string name="question_title_bottom">고객님의 작은 의견에도 귀 기울이는 \n SENDER가 되겠습니다. 문의하신 사항은 담당자가 \n 신속하게 답변해드리도록 노력하겠습니다.</string>
    <string name="receive_answer">답변수신</string>
    <string name="email">이메일</string>
    <string name="sms">SMS</string>
    <string name="input_info">입력정보</string>
    <string name="image_registration">이미지등록</string>
    <string name="image_registration_content">*이미지는 용량 2MB이하 jpg, png, gif 파일만 등록 가능합니다.</string>
    <string name="content">내용</string>
    <string name="report_title">칭찬 / 신고합니다</string>
    <string name="send">입력하기</string>
    <string name="report_title_bottom">칭찬 또는 신고하고 싶은\nDELIVERER를 알려주세요!</string>
    <string name="title_qa">문의하기</string>
    <string name="qa_contents_hint">문의 내용을 작성해 주세요.</string>
    <string name="qa_title_count">(0/100)</string>
    <string name="qa_contents_count">(0/700)</string>
</resources>