<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sender.team.sender.QuestionActivity"
    android:background="@color/whitebg">

    <FrameLayout
    android:id="@+id/toolbarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/whitebg"></android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/title_qa"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

</FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarLayout"
        android:focusable="true"
        android:focusableInTouchMode="true" >
        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayline"
            />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/question_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView22"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/question_title_bottom"
            android:lineSpacingExtra="7dp"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/fontcolor"
            android:text="@string/question_ask"
            android:textColor="@color/whitefont"/>

        <RelativeLayout
            android:id="@+id/relativelayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@color/reviewlistbg"
            android:layout_below="@+id/textView38"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/imageView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic02" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_info"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="11sp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView30"
                android:layout_toEndOf="@+id/imageView30"
                android:textColor="@color/fontcolor"
                android:layout_marginLeft="5dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btn_question"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/btn_question"
            android:hint="제목을 작성해 주세요."
            android:layout_below="@+id/relativelayout"
            android:layout_marginTop="16dp"
            android:textSize="11sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:maxLength="100"
            android:background="@null"
            android:singleLine="true" />
        <View
            android:id="@+id/line7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayline"
            android:layout_below="@+id/edit_title"
            android:layout_marginLeft="16dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="3dp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/scrollView"
            android:layout_below="@+id/edit_title"
            android:layout_marginTop="16dp">
        <EditText
            android:id="@+id/edit_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:hint="@string/qa_contents_hint"
            android:layout_below="@+id/edit_title"
            android:layout_marginTop="23dp"
            android:textSize="11sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:maxLength="700"
            android:background="@null"
            android:paddingBottom="10dp"/>



        </ScrollView>

        <View
            android:id="@+id/line8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayline"
            android:layout_below="@+id/scrollView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/scrollView"
            android:text="@string/receive_answer"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="11sp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView35"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView35"
                android:checked="true"
                android:text="@string/email"
                android:textSize="11sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp" />

            <RadioButton
                android:id="@+id/radio_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/sms"
                android:textSize="11sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioGroup"
            android:text="@string/image_registration"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="11sp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:id="@+id/image_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic03"
            android:layout_alignBottom="@+id/textView37"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView36"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/image_picture"
            android:layout_toRightOf="@+id/image_picture"
            android:text="@string/image_registration_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_red_light"
            android:textSize="11sp"
            android:layout_marginLeft="10dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic01"
            android:layout_below="@+id/line4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qa_title_count"
            android:id="@+id/text_title_count"
            android:layout_alignTop="@+id/edit_title"
            android:layout_alignRight="@+id/edit_title"
            android:layout_alignEnd="@+id/edit_title"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qa_contents_count"
            android:id="@+id/text_contents_count"
            android:textSize="11sp"
            android:layout_alignBottom="@+id/scrollView"
            android:layout_alignRight="@+id/edit_title"
            android:layout_alignEnd="@+id/edit_title" />

    </RelativeLayout>

</RelativeLayout>
